------------------------------
AmiSSL Open Source - ChangeLog
------------------------------

$Id$
$URL$

2014-06-12 Jens Maus <mail@jens-maus.de>

  * misc: merged the vendor update of OpenSSL 0.9.8y to our 'openssl' top-level
    directory and adapted our build environment accordingly. The build still doesn't
    success until linking the shared library but we are pretty close I would think.

2014-03-13 Jens Maus <mail@jens-maus.de>

  * src/amissl_library.c: slightly improved the multithreading locking mechanism.
  * src/amissl_library.c: removed the restrictions of the IDEA and MDC2 cipher due
    to patents being in place. In fact, the IDEA patent lasted only till 2012
    (see http://en.wikipedia.org/wiki/International_Data_Encryption_Algorithm) and
    the MDC2 cipher patent expired in 2002 (see http://en.wikipedia.org/wiki/MDC-2).
    Also note that the RC5 cipher patent is also going to be expire in 2015.

2014-03-12 Jens Maus <mail@jens-maus.de>

  * misc: adapted all AmiSSL related changes to match and integrate the change from
    OpenSSL 0.9.7g to 0.9.7m. Modified the build environment to get everything more
    smoothly compiled. Also updated the include/xml interface desription files to
    match idltool 53.7 functionality so that even the m68k vector table source files
    are generated via idltool.
  * opemssl, misc: merged the changes between 0.9.7g and 0.9.7m into our 'openssl'
    top-level directory.
  * vendor/openssl-0.9.7m: put the latest OpenSSL 0.9.7 sources into a separate
    vendor branch

===== OLD RELEASE NOTES =====

AmiSSL 3.7 (2.4.2006)

- Fixed a problem in amisslmaster.library where init and cleanup routines
  might not get called a matching number of times.
- The expunge routine for amissl.library was cleaning up all currently hashed
  states, which is fine, but the pool from which these states were allocated was
  long gone at that time causing spectacular fireworks. Removed the cleanup from