@@ -5,8 +5,9 @@
 #define AMISSL_V096g        0x01  /* AmiSSL v2 */
 #define AMISSL_V097g        0x02  /* AmiSSL v3.7 */
 #define AMISSL_V097m        0x03  /* unreleased version */
+#define AMISSL_V098y        0x04  /* unreleased version */
 
-#define AMISSL_CURRENT_VERSION   AMISSL_V097m
+#define AMISSL_CURRENT_VERSION   AMISSL_V098y
 
 #define AMISSLMASTER_MIN_VERSION 3
 
