@@ -9,10 +9,10 @@ $rm='-rm -f';
 $mkdir='mkdir';
 
 # C compiler stuff
-$cc="ppc-amigaos-gcc-4.0.3 \$(GCCVER)";
+$cc="ppc-amigaos-gcc-4.0.3";
 $cfile="-c ";
 $cflags="";
-$app_cflag="\$(ADD) -mcrt=clib2 -DAMISSL -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/openssl -g -O3  -Wno-pointer-sign";
+$app_cflag="\$(ADD) -mcrt=clib2 -DAMISSL -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/openssl -g -O3 -Wno-pointer-sign";
 $lib_cflag="\$(ADD) -mcrt=clib2 -mbaserel -mcheck68kfuncptr -DAMISSL -DAMISSL_COMPILE -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/libcmt/include -g -O3 -Wno-pointer-sign";
 $obj='.o';
 $ofile='-o ';
